attempt fix on mobile parallax image size issue 5

--- a/style.scss
+++ b/style.scss
@@ -123,7 +123,7 @@ body {
     color: $background;
     font-size: 3em;
     margin: 10px;
-    @media (max-width: 375px) {
+    @media (max-width: 350px) {
       font-size: 1em;
     }
   }
